<resources>
    <string name="app_name">Ben ik normaal?</string>
    <!-- <string name="action_settings">Settings</string> -->

    <string name="report_knop">Flag</string>
    <string name="downvote_knop">\\/</string>
    <string name="upvote_knop">/\\</string>
    <string name="resultaat_knop">resultaat</string>
    <string name="volgende_knop">--></string>
    <string name="title_activity_display_resultaat">Mijn Resultaat</string>
    <string name="title_activity_beniknormaal">Ben ik normaal?</string>

    //login
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    //menu items
    <string name="menu_speel">Speel!</string>
    <string name="menu_account">Account</string>
    <string name="menu_vraagToevoegen">Vraag toevoegen</string>
    <string name="menu_mijnVragen">Mijn vragen</string>
    <string name="menu_instructies">Instructies</string>
    <string name="menu_credits">Credits</string>
    <string name="menu_uitloggen">Uitloggen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    //Help popup
    <string name="help_title_1">1. Vragen</string>
    <string name="help_title_2">2. Resultaat</string>
    <string name="help_title_3">3. Commentaar</string>
    <string name="help_title_4">4. Stemmen</string>
    <string name="help_title_5">5. Ontmoeten</string>
    <string name="help_title_6">6. Flaggen</string>
    <string name="help_title_7">7. Verborgen Knop</string>
    <string name="help_message_1">In deze app is het de bedoeling om vragen te beantwoorden</string>
    <string name="help_message_2">Na het antwoorden kunt u zien hoeveel procent hetzelfde heeft geantwoord als u</string>
    <string name="help_message_3">U kunt ook commentaar geven op de gestelde vragen, of op ander commentaar</string>
    <string name="help_message_4">Het is ook mogelijk om te stemmen op de vragen en het commentaar, zowel positief als negatief</string>
    <string name="help_message_5">Als u veel vragen hetzelfde beantwoord als een ander individu, kunt u praten met hem of haar</string>
    <string name="help_message_6">Wij verzoeken u vriendelijk om de vragen en het commentaar te flaggen, indien deze ongepast zijn</string>
    <string name="help_message_7">In de app is een verborgen knop gestopt. Veel zoekplezier!</string>
    <string name="help_sluit">\u0020\u0020\u0020\u0020\u0020\u0020Sluit\u0020\u0020\u0020\u0020\u0020\u0020\u0020</string>
    <string name="help_volgende">\u0020\u0020\u0020\u0020Volgende</string>
    <string name="help_vorige">Vorige\u0020\u0020\u0020\u0020\u0020</string>

    //Credits popup
    <string name="credits_message">Nicole van den Dries\nSander Feenstra\nBrian Janssen\nFloris Pauwels\nLaura Tigchelaar\nIris Tuhumena\n\nBen Ik Normaal App\nVersie 1.0.0\n@2015 Team Beat Inc.\nAll rights reserved</string>
    <string name="credits_title">credits_title</string>
    <string name="credits_button">Sluit</string>

    //Ben ik normaal teksten
    <string name="percentage0_10">Wauw, jij bent wel heel erg normaal! Pas je op dat je geen grijze muis wordt!?</string>
    <string name="percentage11_50">Jij kunt je goed identificeren met \'the crowd\', je mag je best wat meer onderscheiden!</string>
    <string name="percentage51_90">Jij onderscheid je goed van de menigte, ga zo door!</string>
    <string name="percentage91_100">Zo! Jij mag weleens wat meer naar je omgeving kijken. Deze score is echt niet normaal!</string>

</resources>
