<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_speel"

            android:title="@string/menu_speel"/>

        <item
            android:id="@+id/menu_account"

            android:title="@string/menu_account" />
        <item
            android:id="@+id/menu_vraagToevoegen"

            android:title="@string/menu_vraagToevoegen" />
        <item
            android:id="@+id/menu_mijnVragen"

            android:title="@string/menu_mijnVragen" />
        <item
            android:id="@+id/menu_instructies"

            android:title="@string/menu_instructies" />
        <item
            android:id="@+id/menu_credits"

            android:title="@string/menu_credits"/>
        <!--android:onClick="CreditPopUp"-->

        <item
            android:id="@+id/menu_uitloggen"

            android:title="@string/menu_uitloggen" />
    </group>

    <!--  <item android:title="Communicate">
          <menu>
              <item
                  android:id="@+id/menu_share"
                  android:icon="@drawable/ic_menu_share"
                  android:title="Share" />
              <item
                  android:id="@+id/menu_send"
                  android:icon="@drawable/ic_menu_send"
                  android:title="Send" />
          </menu>
      </item>-->

</menu>
