<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="beat.beniknormaal.MainActivity"
    tools:showIn="@layout/activity_vraag"
    android:background="#14327d">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width=" 50dp"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="top|right"
        android:background="@drawable/logo_klein"

        android:id="@+id/linearLayout3"
        android:layout_gravity="right"></LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text= "Hier komt de vraag"
        android:textSize="40dp"
        android:gravity="top"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="60dp"
        android:drawableTint="#ffffff"
        android:textColor="#ffffff" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="8"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout2">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Antwoord A - button past zich aan de lengte van de tekst aan, we moeten dus een maximale lengte instellen voor de antwoorden, anders valt B eraf"

            android:textSize="20dp"
            android:id="@+id/ButtonA"
            android:layout_alignBaseline="@+id/ButtonB"
            android:layout_alignBottom="@+id/ButtonB"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="left"
            android:onClick="ButtonAntwoord"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Antwoord B"
            android:textSize="20dp"
            android:id="@+id/ButtonB"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:onClick="ButtonAntwoord"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="bottom">
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volgende_knop"
        android:id="@+id/ButtonVolgende"
        android:onClick="ButtonVolgende"
        android:layout_toLeftOf="@+id/ButtonResultaat"
        android:layout_toStartOf="@+id/ButtonResultaat"
        android:layout_alignParentBottom="true"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultaat_knop"
        android:id="@+id/ButtonResultaat"
        android:onClick="ButtonResultaat"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:text="@string/upvote_knop"
        android:id="@+id/buttonUp"
        android:onClick="buttonUp"
        style="?android:attr/buttonStyleSmall"
        android:layout_toLeftOf="@+id/buttonDown"
        android:layout_alignParentBottom="true"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/downvote_knop"
        android:id="@+id/buttonDown"
        android:onClick="buttonDown"
        style="?android:attr/buttonStyleSmall"
        android:layout_alignTop="@+id/buttonReport"
        android:layout_toLeftOf="@id/buttonReport"
        android:layout_alignParentBottom="true"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/report_knop"
        android:id="@+id/buttonReport"
        android:onClick="buttonReport"
        style="?android:attr/buttonStyleSmall"
        android:layout_toLeftOf="@+id/ButtonVolgende"
        android:layout_alignParentBottom="true"
        />
    </LinearLayout>
</LinearLayout>
